--- a/sample_vehicle_launch/package.xml
+++ b/sample_vehicle_launch/package.xml
@@ -4,6 +4,8 @@
   <name>my_vehicle_launch</name>
   <version>0.1.0</version>
   <description>The my_vehicle_launch package</description>
+  <maintainer email="ryohsuke.mitsudome@tier4.jp">Ryohsuke Mitsudome</maintainer>
+  <maintainer email="yukihiro.saito@tier4.jp">Yukihiro Saito</maintainer>
   <license>Apache 2.0 License</license>
 
   <buildtool_depend>ament_cmake_auto</buildtool_depend>
