--- a/sample_vehicle_description/package.xml
+++ b/sample_vehicle_description/package.xml
@@ -3,8 +3,10 @@
 <package format="3">
   <name>sample_vehicle_description</name>
   <version>0.1.0</version>
-  <description>The my_vehicle_description package</description>
-  <maintainer email="t112360140@ntut.org.tw">t112360140</maintainer>
+  <description>The sample_vehicle_description package</description>
+  <maintainer email="ryohsuke.mitsudome@tier4.jp">Ryohsuke Mitsudome</maintainer>
+  <maintainer email="yukihiro.saito@tier4.jp">Yukihiro Saito</maintainer>
+  <maintainer email="kenji.miyake@tier4.jp">Kenji Miyake</maintainer>
   <license>Apache 2.0 License</license>
 
   <buildtool_depend>ament_cmake_auto</buildtool_depend>
